# tox-bindep

./: .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  bindep.txt  mypy.ini  setup.cfg
.github/workflows/: tox.yml
src/tox_bindep/: hooks.py
tests/: test_bindep.py
