[metadata]
name = tox-bindep
url = https://github.com/ssbarnea/tox-bindep
project_urls =
    Bug Tracker = https://github.com/ssbarnea/tox-bindep/issues
    Release Management = https://github.com/ssbarnea/tox-bindep/releases
    CI = https://github.com/ssbarnea/tox-bindep/actions
    Source Code = https://github.com/ssbarnea/tox-bindep
description = Performs bindep checks before running
long_description = file: README.md
long_description_content_type = text/markdown
author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
maintainer = Sorin Sbarnea
maintainer_email = sorin.sbarnea@gmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: tox
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Testing
keywords =
    bindep
    tox
    tox-plugin

[options]
use_scm_version = True
python_requires = >=3.6
package_dir =
  = src
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
  setuptools_scm>=1.15.0
  setuptools_scm_git_archive>=1.0

# These are required in actual runtime:
install_requires =
  tox >= 3.18  # allowlist_externals
  bindep >= 2.8.1

[options.entry_points]
tox =
  bindep = tox_bindep.hooks

[options.packages.find]
where = src

[flake8]
# do not add excludes for files in repo
exclude = .venv/,.tox/,dist/,build/,.eggs/
format = pylint
# E203: https://github.com/python/black/issues/315
ignore = E203
#E741,W503,W504,H,E501,E203
# 88 is official black default:
max-line-length = 88
